# api/docs/swagger.json
@@ -271,7 +271,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.InitiatePasswordResetReq"
+                            "$ref": "#/definitions/api.EmailReq"
                         }
                     }
                 ],
@@ -331,6 +331,75 @@
                 }
             }
         },
+        "/login/begin": {
+            "post": {
+                "description": "Begin login process",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "webauthn"
+                ],
+                "summary": "Begin login",
+                "parameters": [
+                    {
+                        "description": "Email",
+                        "name": "email",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.EmailReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.SuccessRes"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorRes"
+                        }
+                    }
+                }
+            }
+        },
+        "/login/finish": {
+            "post": {
+                "description": "Finish login process",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "webauthn"
+                ],
+                "summary": "Finish login",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.SuccessRes"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorRes"
+                        }
+                    }
+                }
+            }
+        },
         "/recipient": {
             "post": {
                 "security": [
@@ -356,7 +425,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.RecipientReq"
+                            "$ref": "#/definitions/api.EmailReq"
                         }
                     }
                 ],
@@ -619,6 +688,75 @@
                 "responses": {
                     "201": {
                         "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/api.SuccessRes"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorRes"
+                        }
+                    }
+                }
+            }
+        },
+        "/register/begin": {
+            "post": {
+                "description": "Begin registration process",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "webauthn"
+                ],
+                "summary": "Begin registration",
+                "parameters": [
+                    {
+                        "description": "Email",
+                        "name": "email",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.EmailReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/api.SuccessRes"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorRes"
+                        }
+                    }
+                }
+            }
+        },
+        "/register/finish": {
+            "post": {
+                "description": "Finish registration process",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "webauthn"
+                ],
+                "summary": "Finish registration",
+                "responses": {
+                    "200": {
+                        "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/api.SuccessRes"
                         }
@@ -1124,7 +1262,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.TotpConfirm"
+                            "$ref": "#/definitions/api.TotpReq"
                         }
                     }
                 ],
@@ -1203,7 +1341,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.TotpConfirm"
+                            "$ref": "#/definitions/api.TotpReq"
                         }
                     }
                 ],
@@ -1289,32 +1427,21 @@
                 }
             }
         },
+        "api.EmailReq": {
+            "type": "object",
+            "required": [
+                "email"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                }
+            }
+        },
         "api.ErrorRes": {
             "type": "object",
             "properties": {
                 "error": {
-                    "type": "string"
-                }
-            }
-        },
-        "api.InitiatePasswordResetReq": {
-            "type": "object",
-            "required": [
-                "email"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string"
-                }
-            }
-        },
-        "api.RecipientReq": {
-            "type": "object",
-            "required": [
-                "email"
-            ],
-            "properties": {
-                "email": {
                     "type": "string"
                 }
             }
@@ -1379,14 +1506,16 @@
                 }
             }
         },
-        "api.TotpConfirm": {
+        "api.TotpReq": {
             "type": "object",
             "required": [
                 "otp"
             ],
             "properties": {
                 "otp": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 8,
+                    "minLength": 6
                 }
             }
         },
@@ -1399,6 +1528,11 @@
             "properties": {
                 "email": {
                     "type": "string"
+                },
+                "otp": {
+                    "type": "string",
+                    "maxLength": 8,
+                    "minLength": 0
                 },
                 "password": {
                     "type": "string",
@@ -1546,6 +1680,9 @@
         "model.TOTPNew": {
             "type": "object",
             "properties": {
+                "account": {
+                    "type": "string"
+                },
                 "secret": {
                     "type": "string"
                 },
@@ -1567,6 +1704,9 @@
                     "type": "string"
                 },
                 "is_active": {
+                    "type": "boolean"
+                },
+                "totp_enabled": {
                     "type": "boolean"
                 }
             }
